--- a/Sem2/Macro/PSets/PS2/ps2.tex
+++ b/Sem2/Macro/PSets/PS2/ps2.tex
@@ -146,5 +146,7 @@
       $v_t = [(1-\beta)(\lambda c_t)^{\rho} + \beta(\mathbb{E}[\lambda v_{t+1}]^{\alpha})^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}}$  This allows us to move the $\lambda$ term out such that $v_t = [\lambda^{\rho}(1-\beta)(c_t^{\rho}) + \lambda^{\rho}\beta(\mathbb{E}[v_t]^{\alpha})^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}}$. Finally, we can show that utility is linearly scaled by lambda such that $v_t = \lambda[(1-\beta)c_t^{\rho}+\beta(\mathbb{E}c_t^{\alpha})^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}}$.
     \end{proof}
   \subsection*{(B)}
-    In the deterministic case, $v_t=v_{t+1}=U_0^d$. This allows us to write the uncertain case as $U_0^c(1+\eta)=U_0 \Rightarrow \eta \frac{U_0^d}{U_0^c}-1\Rghtarrow \eta = \frac{\bar{c}}{U_0^c}^{\frac{1}{\rho}}-1 
+    In the deterministic case, $v_t=v_{t+1}=U_0^d$. This allows us to write the uncertain case as $U_0^c(1+\eta)=U_0 \Rightarrow \eta \frac{U_0^d}{U_0^c}-1\Rghtarrow \eta = \frac{\bar{c}}{U_0^c}^{\frac{1}{\rho}}-1.$ 
+  \subsection*{(C)}
+    
 \end{document}
