--- a/Sem2/Macro/PSets/PS2/ps2.tex
+++ b/Sem2/Macro/PSets/PS2/ps2.tex
@@ -15,6 +15,9 @@
 
 \maketitle
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Problem 1 - Business Cycle and whatnot  %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Problem 1: Costs of Business Cycle}
   Let utility be given by:
   \begin{equation*}
@@ -58,7 +61,9 @@
 
   \subsection*{Part D}
     Denote the interest rate as $r$. Find consumption $c_t$.
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Problem 2 - Non-Expected Utility        %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Problem 2: Non-Expected Utility Framework}
   This problem follows the Kreps and Porteus (1978), Epstein and Zin (1991), and Weil (1990) frameworks.
 
@@ -146,7 +151,36 @@
       $v_t = [(1-\beta)(\lambda c_t)^{\rho} + \beta(\mathbb{E}[\lambda v_{t+1}]^{\alpha})^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}}$  This allows us to move the $\lambda$ term out such that $v_t = [\lambda^{\rho}(1-\beta)(c_t^{\rho}) + \lambda^{\rho}\beta(\mathbb{E}[v_t]^{\alpha})^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}}$. Finally, we can show that utility is linearly scaled by lambda such that $v_t = \lambda[(1-\beta)c_t^{\rho}+\beta(\mathbb{E}c_t^{\alpha})^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}}$.
     \end{proof}
   \subsection*{(B)}
-    In the deterministic case, $v_t=v_{t+1}=U_0^d$. This allows us to write the uncertain case as $U_0^c(1+\eta)=U_0 \Rightarrow \eta \frac{U_0^d}{U_0^c}-1\Rghtarrow \eta = \frac{\bar{c}}{U_0^c}^{\frac{1}{\rho}}-1.$ 
+    In the deterministic case, $v_t=v_{t+1}=U_0^d$. This allows us to write the uncertain case as $U_0^c(1+\eta)=U_0^d \Rightarrow \eta=\frac{U_0^d}{U_0^c}-1\Rightarrow \eta = \frac{\bar{c}}{U_0^c}$. 
   \subsection*{(C)}
+    Using the probabilities $\Pi_L = 0.5, \ \Pi_H = 0.5$, we can derive value functions for the cases in which you get a low draw and a high draw.
+    \begin{gather*}
+      \bar{c} = \Pi_Lc_L + \Pi_Hc_H \\
+      U_0 = (\mathbb{E}[v_0^{\alpha}])^{\frac{1}{\alpha}} = [\Pi_Lc_L^{\alpha} + \Pi_Hc_H^{\alpha}]^{\frac{1}{\alpha}} \\
+      \shortintertext{Plugging into $\eta$ formula derived above} \\
+      \eta = \frac{\Pi_Lc_L + \Pi_Hc_H}{[\Pi_Lc_L^{\alpha} + \Pi_Hc_H^{\alpha}]^{\frac{1}{\alpha}}} -1 \\
+    \end{gather*}
+    This shows that $\eta$ depends on the risk aversion parameter $\alpha$. $\rho$ does not appear as at period $t=0$, consumption is constant and sees no uncertainty. The agent feels no disutility from pushing consumption to a future period $t$. 
+  \subsection*{(D)}
+    Let's start with the case in which $c_t = c_L$.
+    \begin{gather*}
+      v_L = [(1-\beta)c_L^{\rho} + \beta(\mathbb{E}[v_{t+1}^{\alpha}])^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}} \\
+    \end{gather*}
+    Next, in the case in which $c_t = c_H$,
+    \begin{gather*}
+      v_H = [(1-\beta)c_H^{\rho} + \beta(\mathbb{E}[v_{t+1}^{\alpha}])^{\frac{\rho}{\alpha}}]^{\frac{1}{\rho}} \\
+    \end{gather*}
+    Now, allow $R = \mathbb{E}[v_{t+1}^{\alpha}]^{\frac{1}{\alpha}} = [\Pi_Lv_L^{\alpha} + \Pi_Hv_H^{\alpha}]^{\frac{1}{\alpha}}$. From here, we can update the value functions in each state:
+    \begin{gather*}
+      v_L = [(1-\beta)c_L^{\rho} + \beta R^{\rho}]^{\frac{1}{\rho}} \\
+      v_H = [(1-\beta)c_H^{\rho} + \beta R^{\rho}]^{\frac{1}{\rho}} \\
+    \end{gather*}
+    Now, we can use these functions to update $U_0$:
+    \begin{gather*}
+      U_0 = (\mathbb{E}_0[v_0^{\alpha}])^{\frac{1}{\alpha}} -R \\
+      U_0 = \{\Pi_L[(1-\beta)c_L^{\rho} + \beta U_0]^{\frac{\alpha}{\rho}} + \Pi_H[(1-\beta)c_H^{\rho}+\beta U_0^{\rho})]^{\frac{\alpha}{\rho}}\} \\
+    \end{gather*}
+    Here, in this case, $\alpha, \ \rho$ are present due to the fact that consumption can now vary in each period. This causes the agent to experience disutility $\rho$ for creating a buffer stock as well as their risk aversion $\alpha$. 
+  \subsection*{(E)}
     
 \end{document}
