--- a/Sem2/Macro/PSets/PS2/ps2.tex
+++ b/Sem2/Macro/PSets/PS2/ps2.tex
@@ -182,5 +182,20 @@
     \end{gather*}
     Here, in this case, $\alpha, \ \rho$ are present due to the fact that consumption can now vary in each period. This causes the agent to experience disutility $\rho$ for creating a buffer stock as well as their risk aversion $\alpha$. 
   \subsection*{(E)}
-    
+   \begin{table}[]
+    \begin{tabular}{ccc}
+    Alpha & Eta    & Iterations \\
+    1     & 2.7188 & 312        \\
+    0.5   & 2.7188 & 312        \\
+    -1    & 2.7188 & 312       
+    \end{tabular}
+    \end{table}   
+    \begin{table}[]
+    \begin{tabular}{ccc}
+    Rho & Eta    & Iterations \\
+    1   & 2.7188 & 312        \\
+    0.5 & 2.7186 & 316        \\
+    -1  & 2.7178 & 331       
+    \end{tabular}
+    \end{table}
 \end{document}
