--- a/Sem2/Macro/PSets/PS2/ps2.tex
+++ b/Sem2/Macro/PSets/PS2/ps2.tex
@@ -182,20 +182,21 @@
     \end{gather*}
     Here, in this case, $\alpha, \ \rho$ are present due to the fact that consumption can now vary in each period. This causes the agent to experience disutility $\rho$ for creating a buffer stock as well as their risk aversion $\alpha$. 
   \subsection*{(E)}
-   \begin{table}[]
+  From the tables below, it can be seen that risk aversion $\alpha$ has very little effect, staying stagnant regardless of the level of the parameter. $\rho$, however, decreases $\eta$ as it decreases as well. Thus, the disutility of pushing consumption plays a factor in determining $\eta$.  
+\newpage
     \begin{tabular}{ccc}
     Alpha & Eta    & Iterations \\
+    \hline
     1     & 2.7188 & 312        \\
     0.5   & 2.7188 & 312        \\
     -1    & 2.7188 & 312       
     \end{tabular}
-    \end{table}   
-    \begin{table}[]
+    \quad
     \begin{tabular}{ccc}
     Rho & Eta    & Iterations \\
+    \hline
     1   & 2.7188 & 312        \\
     0.5 & 2.7186 & 316        \\
     -1  & 2.7178 & 331       
     \end{tabular}
-    \end{table}
 \end{document}
