--- a/Sem2/Macro/PSets/PS3/ps3.tex
+++ b/Sem2/Macro/PSets/PS3/ps3.tex
@@ -59,4 +59,7 @@ The consumer’s endowment $y_t$ is i.i.d. with values $y_H$ and $y_L$ occurring
     \item[(4)] Simulate the income process and optimal decision rules over $T=100$ periods. Compare results with and without borrowing constraints.
 \end{enumerate}
 
+\section*{Solution 1}
+  \subsection*{Part (1)}
+       
 \end{document}
